replace sun.misc.BASE64En/Decoder by apache commons codec