@@ -6,10 +6,11 @@
  * included with this distribution in the LICENSE.NPL file.  */
 package er.extensions.crypting;
 
-import java.io.IOException;
 import java.security.Key;
 import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 
+import org.apache.commons.codec.binary.Base64;
 import org.apache.log4j.Logger;
 
 import com.webobjects.foundation.NSArray;
@@ -163,11 +164,9 @@ public class ERXCrypto {
 		try {
 			MessageDigest md = MessageDigest.getInstance("SHA");
 			md.update(v.getBytes());
-			String hashedPassword = new String(md.digest());
-			sun.misc.BASE64Encoder enc = new sun.misc.BASE64Encoder();
-			base64HashedPassword = enc.encode(hashedPassword.getBytes());
+			base64HashedPassword = Base64.encodeBase64String(md.digest()); 
 		}
-		catch (java.security.NoSuchAlgorithmException e) {
+		catch (NoSuchAlgorithmException e) {
 			throw new NSForwardException(e, "Couldn't find the SHA hash algorithm; perhaps you do not have the SunJCE security provider installed properly?");
 		}
 		return base64HashedPassword;
@@ -278,36 +277,17 @@ public class ERXCrypto {
 	 * @return the encoded string
 	 */
 	public static String base64Encode(byte[] byteArray) {
-		sun.misc.BASE64Encoder enc = new sun.misc.BASE64Encoder();
-		String base64String = enc.encode(byteArray);
-		return base64String;
+		return Base64.encodeBase64String(byteArray);
 	}
 	
 	/**
 	 * Base64url encodes the passed in byte[]
 	 * 
-	 * @param byteArray the byte array to url encode
+	 * @param byteArray the byte array to URL encode
 	 * @return the encoded string
 	 */
 	public static String base64urlEncode(byte[] byteArray) {
-		String base64String = base64Encode(byteArray);
-		StringBuffer sb = new StringBuffer(base64String.length());
-		for (int i = 0; i < base64String.length(); i++) {
-			char ch = base64String.charAt(i);
-			if (ch == '+') {
-				sb.append('-');
-			}
-			else if (ch == '/') {
-				sb.append('_');
-			}
-			else if (ch == '\r' || ch == '\n') {
-				// Do nothing
-			}
-			else if (ch != '=') {
-				sb.append(ch);
-			}
-		}
-		return sb.toString();
+		return Base64.encodeBase64URLSafeString(byteArray);
 	}
 
 	/**
@@ -315,22 +295,18 @@ public class ERXCrypto {
 	 * 
 	 * @param s the string to decode
 	 * @return a byte array of the decoded string
-	 * @throws IOException if the decode fails
 	 */
-	public static byte[] base64Decode(String s) throws IOException {
-		sun.misc.BASE64Decoder enc = new sun.misc.BASE64Decoder();
-		byte[] raw = enc.decodeBuffer(s);
-		return raw;
+	public static byte[] base64Decode(String s) {
+		return Base64.decodeBase64(s);
 	}
 	
 	/**
 	 * Base64url decodes the passed in String
 	 * 
-	 * @param s the string to url decode
+	 * @param s the string to URL decode
 	 * @return a byte array of the decoded string
-	 * @throws IOException if the decode fails
 	 */
-	public static byte[] base64urlDecode(String s) throws IOException {
+	public static byte[] base64urlDecode(String s) {
 		int length = s.length();
 		StringBuffer sb = new StringBuffer(length);
 		int i = 0;
@@ -436,7 +412,7 @@ public class ERXCrypto {
 	
 	/**
 	 * Run this with ERXMainRunner passing in the plaintext you want to encrypt
-	 * using the default crypter.  This is useful if you are using encrypted 
+	 * using the default crypter. This is useful if you are using encrypted 
 	 * properties and you need a quick way to know what to set the property
 	 * value to.
 	 * 
